--- a/index.html
+++ b/index.html
@@ -42,25 +42,20 @@
     // -----------------------------
     const spots = [
       {
-        name: "Startpunkt Kreuzberge",
-        lat: 51.83125,
-        lon: 12.23200,
-        radius: 100, // Meter
-        message: "Schön, dass Sie Lust haben, Dessau neu zu entdecken! Begeben Sie sich jetzt in Richtung Kreuzberge. Dort beginnt Ihre Tour."
+        name: "Starttext",
+        message: "Willkommen zum Audioguide-Test von Thomas Grünberg. "
+               + "Begeben Sie sich jetzt zur Testadresse in Dänemark bei den Koordinaten "
+               + "fünfundfünfzig Komma null acht sieben sieben sieben vier, acht Komma fünf vier acht eins zwei fünf. "
+               + "Wenn Sie dort ankommen, wird automatisch die nächste Nachricht abgespielt."
       },
       {
-        name: "Station Törten",
-        lat: 51.82235,
-        lon: 12.24780,
-        radius: 100,
-        message: "Sie befinden sich nun im Bauhaus-Siedlungsgebiet Törten. Diese Siedlung entstand zwischen 1926 und 1928 nach Entwürfen von Walter Gropius."
-      },
-      {
-        name: "Station Haideburg",
-        lat: 51.81125,
-        lon: 12.22150,
-        radius: 100,
-        message: "Willkommen in Haideburg. Hier endet der erste Teil Ihrer Audiotour. Vielen Dank fürs Mitradeln!"
+        name: "Zielbereich Dänemark",
+        lat: 55.096002,
+        lon: 8.544598,
+        radius: 200, // Meter
+        message: "Sie haben den Zielbereich erreicht! "
+               + "Das GPS funktioniert einwandfrei. "
+               + "Hier könnte nun Ihre erste inhaltliche Station beginnen – etwa eine Ortsbeschreibung oder ein Audioabschnitt."
       }
     ];
 
