--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Dessau-Roßlau Audioguide für Smart Glasses von Thomas Grünberg</title>
+  <title>Dessau-Roßlau-Audioguide via Smart Glasses von Thomas Grünberg</title>
   <style>
     body {
       font-family: system-ui, sans-serif;
@@ -31,7 +31,7 @@
   </style>
 </head>
 <body>
-  <h1>Dessau-Roßlau Audioguide für Smart Glasses von Thomas Grünberg</h1>
+  <h1>Dessau-Roßlau-Audioguide via Smart Glasses von Thomas Grünberg</h1>
   <p>Willkommen! Tippe unten auf <strong>Start</strong>, um die GPS-geführte Tour zu beginnen.</p>
   <button onclick="start()">Start</button>
   <p id="status">GPS ist noch nicht aktiv...</p>
