--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Dessau-Roßlau-Audioguide via Smart Glasses von Thomas Grünberg</title>
+  <title>Erlebe jetzt Dessau-Roßlau per Audioguide und smarter Brille. Von Thomas Grünberg</title>
   <style>
     body {
       font-family: system-ui, sans-serif;
@@ -32,7 +32,15 @@
 </head>
 <body>
   <h1>Dessau-Roßlau-Audioguide via Smart Glasses von Thomas Grünberg</h1>
-  <p>Willkommen! Tippe unten auf <strong>Start</strong>, um die GPS-geführte Tour zu beginnen.</p>
+  <p>
+  Schön, dass du da bist!<br>
+  Erlebe Dessau-Roßlau auf neue Weise – mit smarter Brille und Audioguide von Thomas Grünberg. 
+  Kein üblicher Stadtführer, sondern eine persönliche Entdeckungstour 
+  voller Geschichten, Erinnerungen und feiner Details.
+</p>
+<p>
+  Tippe unten auf <strong>Start</strong>, um deine GPS-Tour zu beginnen.
+</p>
   <button onclick="start()">Start</button>
   <p id="status">GPS ist noch nicht aktiv...</p>
 
