--- a/index.html
+++ b/index.html
@@ -43,6 +43,19 @@
 </p>
   <button onclick="start()">Start</button>
   <p id="status">GPS ist noch nicht aktiv...</p>
+  
+  <p style="font-size: 0.8em; color: #555; margin-top: 2em; line-height: 1.5;">
+  <strong>Impressum & Datenschutz</strong><br>
+  Verantwortlich im Sinne des §5 TMG: <strong>Thomas Grünberg</strong><br>
+  Dieses Online-Angebot ist Teil eines kommerziellen Buchprojekts. 
+  Die Nutzung des Audioguides ist auch ohne Buchkauf möglich.<br><br>
+  Es werden keine personenbezogenen Daten gespeichert oder ausgewertet. 
+  Die Standortdaten dienen ausschließlich der lokalen Positionsbestimmung auf deinem Gerät 
+  und werden nicht an den Betreiber übermittelt. 
+  Eine anonyme Zugriffszählung über GitHub Pages kann technisch bedingt stattfinden, 
+  ohne dass Rückschlüsse auf einzelne Personen möglich sind.<br><br>
+  Bereitgestellt über <em>GitHub Pages</em> (Betreiber: GitHub, Inc.).
+</p>
 
   <script>
     // -----------------------------
