--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </style>
 </head>
 <body>
-  <h1>Dessau-Roßlau-Audioguide via Smart Glasses von Thomas Grünberg</h1>
+  <h1>Erlebe jetzt Dessau-Roßlau per Audioguide und smarter Brille. Von Thomas Grünberg</h1>
   <p>
   Schön, dass du da bist!<br>
   Erlebe Dessau-Roßlau auf neue Weise – mit smarter Brille und Audioguide von Thomas Grünberg. 
