--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Erlebe jetzt Dessau-Roßlau per Audioguide und smarter Brille. Von Thomas Grünberg</title>
+  <title>Dessau-Roßlau-Audioguide</title>
   <style>
     body {
       font-family: system-ui, sans-serif;
