--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <h1>Erlebe jetzt Dessau-Roßlau per Audioguide und smarter Brille.<br>
     Von Thomas Grünberg</h1>
   <p>
-  Schön, dass du da bist!<br>
+  <strong>Schön, dass du da bist!</strong><br>
   Erlebe Dessau-Roßlau auf neue Weise – mit smarter Brille und Audioguide von Thomas Grünberg. 
   Kein üblicher Stadtführer, sondern eine persönliche Entdeckungstour 
   voller Geschichten, Erinnerungen und feiner Details.
