--- a/index.html
+++ b/index.html
@@ -35,9 +35,12 @@
     Von Thomas Grünberg</h1>
   <p>
   <strong>Schön, dass du da bist!</strong><br>
-  Erlebe Dessau-Roßlau auf neue Weise – mit smarter Brille und Audioguide von Thomas Grünberg. 
-  Kein üblicher Stadtführer, sondern eine persönliche Entdeckungstour 
-  voller Geschichten, Erinnerungen und feiner Details.
+  Dieser Audioguide ist kein klassischer Stadtführer, sondern eine begleitende, 
+  verkürzte Version der im Buch beschriebenen Route. 
+  Er vermittelt Eindrücke im Schnelldurchlauf und verweist auf Orte, 
+  die im Buch ausführlicher beschrieben sind. 
+  Die Inhalte werden – etwa bei Textprojektionen auf smarte Brillengläser – 
+  vom Buchtext abweichen bzw. gekürzt wiedergegeben werden.
 </p>
 <p>
   Tippe unten auf <strong>Start</strong>, um deine GPS-Tour zu beginnen.
