--- a/index.html
+++ b/index.html
@@ -47,7 +47,11 @@
     (Ehemalige Hausnummer 12 – heute abgerissen)
   </p>
 
-  <button onclick="start()" style="padding: 0.8em 1.2em; font-size: 1em; border-radius: 8px; border: none; background-color: #333; color: white; cursor: pointer; margin-top: 1em;">
+  <button 
+    onclick="start()" 
+    style="padding: 0.8em 1.2em; font-size: 1em; border-radius: 8px; border: none; 
+           background-color: #007bff; color: white; cursor: pointer; margin-top: 1em;
+           transition: background-color 0.3s;">
     Start
   </button>
 
