--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
   </p>
 
   <p style="font-style: italic; margin: 1em 0;">
-    Treffpunkt für den Start: die Wiese hinter den Plattenbauten<br>
-    am <strong>Heinz-Steyer-Ring</strong>, schräg links hinter <strong>Eisen-Maenicke</strong>.<br>
+    Treffpunkt für den Start: die Wiese hinter den Plattenbauten am <strong>Heinz-Steyer-Ring</strong>, schräg links hinter <strong>Eisen-Maenicke</strong>.<br>
     (Ehemalige Hausnummer 12 – heute abgerissen)
   </p>
 
