--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
     // -----------------------------
     const spots = [
       {
-        name: "Zielbereich Carport",
-        lat: 54.293188,
-        lon: 9.701321,
-        radius: 15, // Meter
+        name: "Sie haben den Startbereich auf der Wiese im Heinz-Steyer-Ring erreicht.",
+        lat: 51.810997,
+        lon: 12.252300,
+        radius: 50, // Meter
         message: "Sie haben den Zielbereich erreicht! "
                + "Das GPS funktioniert einwandfrei. "
                + "Fahre bitte nach links"
