--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
         lat: 51.810997,
         lon: 12.252300,
         radius: 50, // Meter
-        message: "Sie haben den Zielbereich erreicht! "
+        message: "Jetzt kann es losgehen. "
                + "Das GPS funktioniert einwandfrei. "
-               + "Fahre bitte nach links"
+               + "Fahre bitte nach links hier muss dann neuer text stehen,"
       },
       {
         name: "Alter Bahnhof",
