--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
     // -----------------------------
     const spots = [
       {
-        name: "Sie haben den Startbereich auf der Wiese im Heinz-Steyer-Ring erreicht.",
+        name: "Start",
         lat: 51.810997,
         lon: 12.252300,
         radius: 50, // Meter
-        message: "Jetzt kann es losgehen. "
+        message: "Sie haben den Startbereich auf der Wiese im Heinz-Steyer-Ring erreicht. Jetzt kann es losgehen. "
                + "Das GPS funktioniert einwandfrei. "
-               + "Fahre bitte nach links hier muss dann neuer text stehen,"
+               + "Fahren Sie bitte auf der Straße ca. 100 Meter in Richtung Kreuzbergschule. Sie erhalten dann fortlaufend Richtungsangaben."
       },
       {
         name: "Alter Bahnhof",
