--- a/index.html
+++ b/index.html
@@ -79,18 +79,18 @@
     // -----------------------------
     const spots = [
       {
-        name: "Start",
+        name: "Start im Heinz-Steyer-Ring",
         lat: 51.810997,
         lon: 12.252300,
         radius: 50, // Meter
         message: "Sie haben den Startbereich auf der Wiese im Heinz-Steyer-Ring erreicht. Jetzt kann es losgehen. "
                + "Das GPS funktioniert einwandfrei. "
-               + "Fahren Sie bitte auf der Straße ca. 100 Meter in Richtung Kreuzbergschule. Sie erhalten dann fortlaufend Richtungsangaben."
+               + "Fahren Sie auf der Straße nahe der Schrebergärten etwa 100 Meter in Richtung Kreuzbergschule. Anschließend erhalten Sie fortlaufend Richtungsangaben."
       },
       {
-        name: "Alter Bahnhof",
-        lat: 54.292717,
-        lon: 9.699287,
+        name: "Heinz-Steyer-Ring 1",
+        lat: 51.811399,
+        lon: 12.251126,
         radius: 15, // Meter
         message: "Sie haben den Zielbereich erreicht! "
                + "Bitte biegen Sie nach links in die Straße Alter Bahnhof ab. "
