--- a/index.html
+++ b/index.html
@@ -92,27 +92,36 @@
         lat: 51.811399,
         lon: 12.251126,
         radius: 15, // Meter
-        message: "Sie haben den Zielbereich erreicht! "
-               + "Bitte biegen Sie nach links in die Straße Alter Bahnhof ab. "
-               + "Fahren Sie die Straße bis zur nächsten Mitteilung."
+        message: "Bleiben Sie bitte im Heinz-Steyer-Ring und biegen Sie nach etwa 20 Metern links ab. "
+               + "Folgen Sie der Straßenführung etwa 110 Meter bis zur Kreuzbergschule. "
+               + "Fahren Sie die Straße entlang, bis zur nächsten Mitteilung. "
       },
       {
-        name: "Mühlenweg",
-        lat: 54.291804,
-        lon: 9.702292,
+        name: "Heinz-Steyer-Ring 2",
+        lat: 51.811171,
+        lon: 12.249749,
         radius: 15, // Meter
-        message: "Sie haben den Zielbereich erreicht! "
-               + "Bitte biegen Sie nach links in den Mühlenweg ab. "
-               + "Fahren Sie die Straße bis zur nächsten Mitteilung."
-      },
+        message: "Biegen Sie links hinter der Kreuzbergschule in eine kleine Schlippe ein. "
+               + "Fahren Sie die Strecke immer geradeaus und biegen Sie am Ende links in den Lorkgraben ab. "
+        },
       {
-        name: "Kieler Straße",
-        lat: 54.293539,
-        lon: 9.702736,
+        name: "Kreuzbergschule",
+        lat: 51.810190,
+        lon: 12.247783,
         radius: 15, // Meter
-        message: "Sie haben den Zielbereich erreicht! "
-               + "Bitte biegen Sie nach links in die Kieler Straße ab. "
-               + "Fahren Sie die Straße bis zu den Carports."
+        message: "Biegen Sie jetzt links ab. "
+               + "Fahren Sie bitte etwa 220 Meter den Lorkgraben entlang. "
+               + "Auf der linken Seite sehen Sie den ausgetrockneten Lorkteich – Stichwort: Entengrütze. "
+      },
+     {
+        name: "Lorkgraben",
+        lat: 51.808591,
+        lon: 12.248695,
+        radius: 15, // Meter
+        message: "Biegen Sie jetzt rechts in den Nordweg. "
+               + "Die Reihenhäuser in den Straßen Großring, Mittelring und Kleinring gehören zur Siedlung Dessau-Törten. "
+               + "Die Siedlung entstand zwischen 1926 und 1928 unter der Leitung von Walter Gropius, dem Gründer des Bauhauses. "
+               + "... hier Moses mendelson erzählen "
       },
       {
         name: "Ende",
