--- a/index.html
+++ b/index.html
@@ -121,7 +121,31 @@
         message: "Biegen Sie jetzt rechts in den Nordweg. "
                + "Die Reihenhäuser in den Straßen Großring, Mittelring und Kleinring gehören zur Siedlung Dessau-Törten. "
                + "Die Siedlung entstand zwischen 1926 und 1928 unter der Leitung von Walter Gropius, dem Gründer des Bauhauses. "
-               + "... hier Moses mendelson erzählen "
+               + "Fahren Sie weiter geradeaus und biegen Sie dann rechts in die Doppelreihe ein. "
+      },
+      {
+        name: "Moses-Mendelssohn-Zentrum",
+        lat: 51.807230,
+        lon: 12.247741,
+        radius: 15, // Meter
+        message: "Falls Sie einmal zum Moses-Mendelssohn-Zentrum möchten, biegen Sie jetzt links in den Mittelring ein und fahren Sie bis zur Hausnummer 38. "
+               + "Ansonsten fahren Sie bitte weiter geradeaus und biegen Sie anschließend rechts in die Doppelreihe ein und fahren diese bis zur nächsten Kreuzung. "
+               + "Schöne Grüße an Manu an dieser Stelle, hihi. "               
+      },
+      {
+        name: "Doppelreihe",
+        lat: 51.806291,
+        lon: 12.246938,
+        radius: 15, // Meter
+        message: "Biegen Sie jetzt rechts in die Doppelreihe ein und fahren Sie bis zur Kreuzung. "
+      },
+      {
+        name: "Bauhaus Stahlhaus",
+        lat: 51.807259,
+        lon: 12.243389,
+        radius: 15, // Meter
+        message: "Rechts sehen Sie die Sehenswürdigkeit Bauhaus Stahlhaus. "
+                + "....... "           
       },
       {
         name: "Ende",
