--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
         lon: 12.247783,
         radius: 15, // Meter
         message: "Biegen Sie jetzt links ab. "
-               + "Fahren Sie bitte etwa 220 Meter den Lorkgraben entlang. "
-               + "Auf der linken Seite sehen Sie den ausgetrockneten Lorkteich – Stichwort: Entengrütze. "
+               + "Fahren Sie bitte etwa 220 Meter geradeaus Richtung Lorkgraben. "
+               + "Auf der linken Seite würden Sie später den ausgetrockneten Lorkteich sehen – Stichwort: Entengrütze. "
       },
      {
         name: "Lorkgraben",
@@ -145,7 +145,18 @@
         lon: 12.243389,
         radius: 15, // Meter
         message: "Rechts sehen Sie die Sehenswürdigkeit Bauhaus Stahlhaus. "
-                + "....... "           
+                + "Das Stahlhaus gehört seit 1996 zum UNESCO-Welterbe. "
+                + "Es wurde 1926/27 von Georg Muche und Richard Paulick im Auftrag der Dessauer Bauverwaltung errichtet. "
+                + "Ziel war es, die industrielle Serienfertigung von Wohnhäusern zu erproben – mit Stahl als zentralem Baustoff. "  
+                + "Bitte biegen Sie am Ende der Doppelreihe nach links ab und fahren Sie die Südstraße entlang. Danach biegen Sie erneut links in die Damaschkestraße ein. "   
+      },
+        {
+        name: "Südstraße",
+        lat: 51.806083,
+        lon: 12.242236,
+        radius: 15, // Meter
+        message: "Bitte biegen Sie jetzt gleich links in die Damaschkestraße ein. "
+                + "Fahren Sie die Damaschkestraße entlang, bis Sie zum Konsumgebäude am Dreieck kommen. "
       },
       {
         name: "Ende",
