--- a/index.html
+++ b/index.html
@@ -158,6 +158,38 @@
         message: "Bitte biegen Sie jetzt gleich links in die Damaschkestraße ein. "
                 + "Fahren Sie die Damaschkestraße entlang, bis Sie zum Konsumgebäude am Dreieck kommen. "
       },
+        {
+        name: "Konsumgebäude",
+        lat: 51.805234,
+        lon: 12.244895,
+        radius: 15, // Meter
+        message: "Bitte biegen Sie jetzt rechts in die Straße Am Dreieck ein und fahren Sie diese bis zum Ende durch. "
+                + "Beim Abbiegen sehen Sie das ehemalige Konsumgebäude von 1928 – heute das Besucherzentrum der Stiftung Bauhaus Dessau. "
+      },
+        {
+        name: "Peterholzstraße",
+        lat: 51.803452,
+        lon: 12.244584,
+        radius: 15, // Meter
+        message: "Bitte biegen Sie jetzt rechts in die Peterholzstraße ein und fahren Sie weiter bis zur Heidestraße. Dort biegen Sie links ab. "
+                + "Links sehen Sie ein Laubenganghaus. Es gehört zu den bekanntesten Bauhaus-Gebäuden in Dessau-Törten und ist Teil des UNESCO-Welterbes. "
+      },
+        {
+        name: "Heidestraße",
+        lat: 51.803182,
+        lon: 12.241549,
+        radius: 15, // Meter
+        message: "Bitte biegen Sie jetzt links in die Heidestraße ein und fahren Sie geradeaus, am Marthahaus vorbei und dann schräg links hinauf in die Alte Leipziger Straße. "
+                + "Auf der rechten Straßenseite sehen Sie das Hotel 22 sowie eine kleine katholische Kirche. "
+      },
+        {
+        name: "Alte Leipziger",
+        lat: 51.797543,
+        lon: 12.240961,
+        radius: 15, // Meter
+        message: "Bitte biegen Sie jetzt schräg links in die Alte Leipziger Straße ein. "
+                + "Jetzt werden die Oberschenkel warm. Zwinker-Emoji. "
+      },
       {
         name: "Ende",
         lat: 54.293303,
