--- a/index.html
+++ b/index.html
@@ -189,6 +189,31 @@
         radius: 15, // Meter
         message: "Bitte biegen Sie jetzt schräg links in die Alte Leipziger Straße ein. "
                 + "Jetzt werden die Oberschenkel warm. Zwinker-Emoji. "
+                + "Bitte fahren Sie die Straße etwa 900 Meter geradeaus entlang. "
+                + "Nach etwa 600 Metern befindet sich auf der rechten Seite die Eisdiele Filla. "
+                + "Kurz vor der Kreuzung befindet sich rechts die Jägerklause, wo Sie sich stärken können."
+                + "Wenn Sie nach rechts in den Schenkenbusch und anschließend nach links in den Holunderweg abbiegen, gelangen Sie zum Jagdschloss. "
+                + "Geradeaus würde es nach Bocksbrändchen gehen – dort kann man schön spazieren. "
+                + "Sie sollten nach Möglichkeit links in den Schenkenbusch abbiegen und dann mit Topspeed hinunter in Richtung Waldbad fahren. "
+      },
+      {
+        name: "Jägerklause",
+        lat: 51.790094,
+        lon: 12.245098,
+        radius: 15, // Meter
+        message: "Rechts können Sie jetzt eine Pause in der Jägerklause einlegen oder nach links in Richtung Waldbad weiterfahren. "
+                + "Die nächste Information folgt, sobald Sie geradeaus am Waldbad vorbeigefahren sind. "
+      },
+       {
+        name: "Kümmerling",
+        lat: 51.792061,
+        lon: 12.256544,
+        radius: 15, // Meter
+        message: "Bitte biegen Sie nach links in die kurze Straße ein, fahren Sie dann geradeaus über die Kreuzung, halten Sie sich rechts und biegen Sie in Am Hang ein. "
+                + "Fahren Sie die Straße Am Hang immer weiter geradeaus. "
+                + "Auf der rechten Seite folgt bald die Dorotheenhöhe. "
+                + "Fahren Sie an der Kreuzung zum Drosselweg gern nach rechts und dann links auf den Deichweg – oder bleiben Sie im Drosselweg. "
+                + "In beiden Fällen biegen Sie am Ende links in den Meisenweg ein. "
       },
       {
         name: "Ende",
