--- a/index.html
+++ b/index.html
@@ -215,6 +215,23 @@
                 + "Fahren Sie an der Kreuzung zum Drosselweg gern nach rechts und dann links auf den Deichweg – oder bleiben Sie im Drosselweg. "
                 + "In beiden Fällen biegen Sie am Ende links in den Meisenweg ein. "
       },
+       {
+        name: "Drosselweg",
+        lat: 51.806317,
+        lon: 12.259464,
+        radius: 50, // Meter
+        message: "Bitte biegen Sie jetzt gleich links in den Meisenweg ein. "
+                + "Fahren Sie die Straße geradeaus bis zur Kreuzbergstraße und biegen Sie dort nach rechts ab, um ihr weiter zu folgen. "
+      },
+       {
+        name: "Kreuzbergstraße",
+        lat: 51.806871,
+        lon: 12.255024,
+        radius: 15, // Meter
+        message: "Bitte biegen Sie nach rechts in die Kreuzbergstraße ein. "
+                + "Fahren Sie die Kreuzbergstraße immer weiter geradeaus bis zur Helmut-Kohl-Straße und biegen Sie dort nach rechts ab. "
+                + "Sie können auch schon kurz vorher rechts den Fahrradweg am Lorkgraben nehmen. "
+             },
       {
         name: "Ende",
         lat: 54.293303,
