--- a/index.html
+++ b/index.html
@@ -231,7 +231,41 @@
         message: "Bitte biegen Sie nach rechts in die Kreuzbergstraße ein. "
                 + "Fahren Sie die Kreuzbergstraße immer weiter geradeaus bis zur Helmut-Kohl-Straße und biegen Sie dort nach rechts ab. "
                 + "Sie können auch schon kurz vorher rechts den Fahrradweg am Lorkgraben nehmen. "
-             },
+      },
+        {
+        name: "Helmut-Kohl-Straße",
+        lat: 51.814313,
+        lon: 12.250102,
+        radius: 15, // Meter
+        message: "Bitte biegen Sie nach rechts in die Helmut-Kohl-Straße ein und fahren Sie diese immer weiter geradeaus. "
+                + "Die nächste Anweisung folgt, sobald Sie am Paul-Greifzu-Stadion vorbeigefahren sind. "
+       },
+        {
+        name: "Paul-Greifzu-Stadion",
+        lat: 51.823351,
+        lon: 12.249610,
+        radius: 15, // Meter
+        message: "Bitte fahren Sie immer weiter geradeaus bis zum Eierschneider, der Tiergartenbrücke. "
+                + "Dann verlassen wir die Route des Buchs und fahren in Richtung Stadtzentrum. "
+                + "Weitere Anweisungen folgen am Fußgängerüberweg auf Höhe der Tiergartenbrücke. "
+       },
+        {
+        name: "Straße am Eierschneider überqueren",
+        lat: 51.831539,
+        lon: 12.248367,
+        radius: 15, // Meter
+        message: "Bitte fahren Sie jetzt hier über die Kreuzung. "
+                + "Passieren Sie bitte die Ludwigshafener Straße und anschließend direkt die Askanische Straße. "
+                + "Biegen Sie dann direkt rechts in die kleine Steinstraße ein. "
+       },
+        {
+        name: "Steinstraße",
+        lat: 51.831752,
+        lon: 12.247179,
+        radius: 15, // Meter
+        message: "Bitte biegen Sie hier direkt rechts in die Steinstraße ein und fahren Sie diese immer weiter geradeaus. "
+                + "Fahren Sie vorbei an der Marienkirche, dem Rathauscenter, dem Rathaus, dem Rathausplatz und dem Kartoffelhaus bis zum Hotel an der Ecke Poststraße. "
+       },
       {
         name: "Ende",
         lat: 54.293303,
