--- a/index.html
+++ b/index.html
@@ -266,6 +266,39 @@
         message: "Bitte biegen Sie hier direkt rechts in die Steinstraße ein und fahren Sie diese immer weiter geradeaus. "
                 + "Fahren Sie vorbei an der Marienkirche, dem Rathauscenter, dem Rathaus, dem Rathausplatz und dem Kartoffelhaus bis zum Hotel an der Ecke Poststraße. "
        },
+       {
+        name: "Ecke Hotel",
+        lat: 51.837017,
+        lon: 12.246307,
+        radius: 15, // Meter
+        message: "Fahren Sie nun bitte geradeaus in die Zerbster Straße.  "
+                + "Überqueren Sie die Straße und fahren Sie anschließend in die Ferdinand-von-Schill-Straße. "
+       },
+        {
+        name: "Kreuzung Kavalierstraße",
+        lat: 51.838752,
+        lon: 12.245198,
+        radius: 15, // Meter
+        message: "Überqueren Sie hier die Straße.  "
+                + "Fahren Sie die Ferdinand-von-Schill-Straße weiter und biegen Sie dann rechts in die Hans-Heinen-Straße ein. "
+       },
+        {
+        name: "Hans-Heinen-Straße",
+        lat: 51.838625,
+        lon: 12.241929,
+        radius: 15, // Meter
+        message: "Eben war übrigens auf der linken Seite das Schwabehaus.  "
+                + "Biegen Sie bitte nach rechts in die Hans-Heinen-Straße ein. "
+                + "Biegen Sie dann direkt links in die Wolfgangstraße ein. "
+       },
+        {
+        name: "Wolfgangstraße",
+        lat: 51.839633,
+        lon: 12.241443,
+        radius: 15, // Meter
+        message: "Biegen Sie jetzt links in die Wolfgangstraße ab.  "
+                + "Folgen Sie der Straße und biegen Sie bitte vorne am UCI-Kino nach rechts ab, die Brücke hinauf. "
+       },
       {
         name: "Ende",
         lat: 54.293303,
