--- a/index.html
+++ b/index.html
@@ -299,6 +299,62 @@
         message: "Biegen Sie jetzt links in die Wolfgangstraße ab.  "
                 + "Folgen Sie der Straße und biegen Sie bitte vorne am UCI-Kino nach rechts ab, die Brücke hinauf. "
        },
+        {
+        name: "Kino",
+        lat: 51.839339,
+        lon: 12.238617,
+        radius: 15, // Meter
+        message: "Biegen Sie jetzt rechts am UCI-Kino ab. "
+                + "Fahren Sie die Antoinettenstraße hinauf. "
+                + "Auf der rechten Seite sehen Sie vor der Brücke das Umweltbundesamt und auf der linken Seite den Hauptbahnhof. "
+                + "Hinter der Brücke könnten Sie rechts zum Tierpark fahren. Fahren Sie jedoch bitte weiter geradeaus auf der Puschkinallee bis zur Kreuzung mit den Sieben Säulen. "
+       },
+        {
+        name: "Sieben Säulen",
+        lat: 51.843047,
+        lon: 12.224689,
+        radius: 15, // Meter
+        message: "Geradeaus in der Ebertallee befinden sich die Meisterhäuser. "
+                + "Biegen Sie bitte links in die Gropiusallee ab und fahren Sie diese bis zum Kreisel am Ende. "
+                + "Auf der linken Seite fahren Sie am Bauhaus vorbei. "
+                + "Hinter der Brücke könnten Sie rechts zum Tierpark abbiegen. Fahren Sie jedoch bitte weiter geradeaus auf der Puschkinallee bis zur Kreuzung mit den Sieben Säulen. "
+       },
+       {
+        name: "Kreisel",
+        lat: 51.835750,
+        lon: 12.229113,
+        radius: 15, // Meter
+        message: "Fahren Sie geradeaus durch den Kreisel in die Kühnauer Straße.  "
+                + "Folgen Sie der Straße kurz bis in die Eisenbahnstraße. "
+                + "Überqueren Sie an dieser Stelle links die Gleise. "
+       },
+       {
+        name: "Gleise",
+        lat: 51.833220,
+        lon: 12.230508,
+        radius: 15, // Meter
+        message: "Fahren Sie jetzt links über die Gleise. "
+                + "Bleiben Sie anschließend in der Elisabethstraße und fahren Sie am Räucherturm vorbei. "
+                + "Folgen Sie der Straße bis zum Landestheater und biegen Sie dann gleich rechts in die Fritz-Hesse-Straße ein. "
+       },
+       {
+        name: "Theater",
+        lat: 51.836183,
+        lon: 12.237777,
+        radius: 15, // Meter
+        message: "Biegen Sie jetzt rechts in die Fritz-Hesse-Straße ein. "
+                + "Fahren Sie geradeaus bis zum Y-Haus. "
+                + "Fahren Sie dann nach links die Friedrichstraße entlang. "
+       },
+        {
+        name: "Kurz vor Y-Haus.",
+        lat: 51.834915,
+        lon: 12.239186,
+        radius: 15, // Meter
+        message: "Biegen Sie jetzt links in die Friedrichstraße ein und fahren Sie diese weiter entlang. "
+                + "Links sehen Sie die alte Post, rechts den Stadtpark. "
+                + "Fahren Sie bis zur Kavalierstraße vor und biegen Sie dann rechts zum Bauhaus Museum ein. "
+       },
       {
         name: "Ende",
         lat: 54.293303,
